--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
+{% include "flash_messages.html" %}
 <h1 class="display-5 fw-bold">About</h1>
 <p>This webpage is about {{ name }}.</p>
 {% endblock %}
