--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
 
     <link rel="stylesheet" href="/static/css/app.css">
     {% block css %} {% endblock%}
