--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block css %} 
+    <link rel="stylesheet" href="/static/css/form.css">
+{% endblock%}
+
 {% block main %}
 <div>
     <h1>Add New Property</h1>
