--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div>
     <h1>Add New Property</h1>
-    <div>
+    <div class="form-container">
         <form method="post" enctype="multipart/form-data">
             {{ form.csrf_token }}
             <div class="input-field">
